# clinical-trials-2025

./: .gitattributes  .gitignore  HowToRun.md  README.md  architecture.drawio  docker-compose.yml
Unused/frontend/src/: App.js  index.js  styles.css
Unused/frontend/src/components/: DownloadPDFComponent.css  DownloadPDFComponent.js  FileUploadComponent.css  FileUploadComponent.js  (+3 more)
backend/: app.py  prompt.txt  requirements.txt
clinical-trial-ui/: Dockerfile  package-lock.json  package.json
clinical-trial-ui/src/: App.css  App.jsx  transitions.css
clinical-trial-ui/src/components/: ConsentFormComponent.css  ConsentFormComponent.jsx  DownloadPDFComponent.css  FileListComponent.css  FileListComponent.jsx  FormSelectionComponent.css  FormSelectionComponent.jsx  HomeComponent.css  HomeComponent.jsx  TextAreaComponent.css  TextAreaComponent.jsx
clinical-trial-ui/src/services/: pdfService.js
experimental/: Informed consent document.md  app.py  boilerplate.py  defaults.py  getVectorstore.py  informed_consent_document.md  langgraph.json  makeMarkdown.py  notebook.ipynb  prompts.py  pyproject.toml  requirements.txt
experimental/documents/: irb.txt
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: FileUploadComponent.css  FileUploadComponent.js  TextAreaComponent.js
langserve_backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
langserve_backend/app/: agents copy.py  agents.py  config.py  filehandler.py  notes  pdf_loader_chunker.py  qdrant_retriever.py  queries.py  rag_builder.py  server.py  templates.py  testing.ipynb
