[tool.poetry]
name = "experimental"
version = "0.1.0"
description = ""
authors = ["Mike Dean <miketraindoc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-qdrant = "^0.1.4"
langgraph = "^0.2.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
